src/osp_cli/repl/snapshots/osp_cli__osp_cli__repl__help__tests__repl_help_minimal_layout.snap
---
source: src/osp_cli/repl/help.rs
assertion_line: 323
expression: rendered
---
Usage:
  osp [OPTIONS]
Commands:
  help
Options:
  -h, --help
Use `osp plugins commands` to list plugin-provided commands.
